--- a/index.html
+++ b/index.html
@@ -157,5 +157,9 @@
         </ul>
     </div>
 
+    <div class="barra-fim">
+        <button class="botao-final-cinza"> Selecione os 3 itens para fechar o pedido </button>
+    </div>
+
 </body>
 </html>
