--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Righteous&family=Roboto:wght@300;400;700&display=swap" rel="stylesheet"> 
 
+
+    <link rel="stylesheet" href="">
 </head>
 
 <body>
@@ -163,5 +165,7 @@
         <button class="botao-final verde"> Fechar pedido </button>
     </div>
 
+
+    <script src="scripts.js/script.js"></script>
 </body>
 </html>
