--- a/index.html
+++ b/index.html
@@ -183,9 +183,8 @@
     <div class="barra-fim">
         <button class="botao-final cinza"> Selecione os 3 itens para fechar o pedido </button>
     
-        <button class="botao-final verde sumir"> Fechar pedido </button>
+        <button onclick="finalizar();" class="botao-final verde sumir"> Fechar pedido </button>
     </div>
-
 
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
